--- a/vistas/contacto.html
+++ b/vistas/contacto.html
@@ -73,6 +73,6 @@
         </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
